--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,5 @@
 @import "left-side-bar";
 @import "rigth-side-bar";
 @import "container-organism";
+@import "atoms/index.scss";
+@import "pages/index.scss";
