--- a/src/styles/pages/_securep.scss
+++ b/src/styles/pages/_securep.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     border: 1px solid #1A445C;
     button {
+      text-transform: none;
       width: 35%;
       height: 53px;
       font-size: 20px;
@@ -57,6 +58,7 @@
         }
         button {
           width: 250px;
+          text-transform: none;
           background: #1A445C;
           color: #fff;
           font-size: 15px;
