--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2,4 +2,6 @@
 @import "profit-log";
 @import "bank-accounting";
 @import "securep";
+@import "settings";
+@import "check-balance";
 @import "container";
