fix: valid fisibly

--- a/src/styles/atoms/_form-input-base.scss
+++ b/src/styles/atoms/_form-input-base.scss
@@ -11,6 +11,10 @@
     color: #333333;
   }
 
+  &__not-label {
+    height: 27px;
+  }
+
   &__label {
     &.MuiFormLabel-root {
       font-size: 20px;
