add: login/reg api

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,7 +11,9 @@
 
   font-weight: normal;
 
+  .login,
   .log-out {
+    user-select: none;
     cursor: pointer;
     color: #1a445c;
     font-size: 20px;
